--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .heeder-large-screen{
     display: flex !important;
     justify-content: space-evenly !important;
-    color:orange;
+    color:rgb(255, 255, 255);
     font-size: 18px !important;
 
 
@@ -20,7 +20,7 @@
 }
 #navDemo a{
     font-size: 13px !important;
-    color:orange;
+    color:rgb(255, 255, 255);
 }
 
 .hero{
@@ -56,7 +56,7 @@
      font-weight: 800;
     text-transform: uppercase;
     font-size: 80px;
-    color:orange;
+    color:rgb(255, 255, 255);
     
     text-align: center;
 
@@ -180,7 +180,7 @@ h4{
 }
 .event-text{
     width:50%;
-    color: orange;
+    color: rgb(255, 255, 255);
 
 }
 .event-title{
